# ReaLHF

./: .buildinfo  .clang-format  .dockerignore  .gitignore  .gitmodules  AUTHORS  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  arch.html  auto_ppo_benchmark.py  auto_ppo_parselog.py  check_resource  compiled_cache.db  contributing.html  create_ckpt.py  customization.html  distributed.html  docker-compose.yml  est_mscost_v2.py  expconfig.html  format  genindex.html  impl.html  index.html  install.html  intro.html  objects.inv  param_realloc_test.py  param_sync_cost_table.pkl  pyproject.toml  quickstart.html  quickstart.sh  requirements.txt  res.pkl  search.html  search_time_profile.py  searchindex.js  (+19 more)
.github/workflows/: format-check.yml  publish.yml  pytest.yml  sphinx.yml
_sources/: contributing.rst.txt  customization.rst.txt  distributed.rst.txt  expconfig.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  quickstart.rst.txt
_static/: custom.css  docs-versions.js  sphinx-nefertiti-default.min.css  sphinx-nefertiti-default.min.css.map  sphinx-nefertiti.min.js  sphinx-nefertiti.min.js.map
_static/colorsets/: sphinx-nefertiti-default-0.4.0.min.css  sphinx-nefertiti-default-0.4.0.min.css.map
api/: config.py  data.py  dfg.py  ecs.py  huggingface.py  model.py  utils.py
api/config/: config_base.py  config_dataset.py  config_device_mesh.py  config_flash_model.py  config_system.py  dfg.py
apps/: main.py  quickstart.py  remote.py
base/: asyncio_utils.py  benchmark_utils.py  buffer.py  cluster.py  consistency.py  constants.py  datapack.py  dataparallel.py  deepspeed_utils.py  gpu_utils.py  logging.py  monitor.py  monitoring.py  name_resolve.py  namedarray.py  names.py  numpy_utils.py  security.py  seeding.py  tensor_utils.py  timeutil.py  topology.py
csrc/: setup.py
csrc/cugae/: gae.cu
csrc/custom_all_reduce/: custom_all_reduce.cu  custom_all_reduce.cuh  custom_all_reduce_test.cu  pybind.cpp
csrc/custom_cudagraph/: custom_cudagraph.cpp  custom_cudagraph.h  pybind.cpp
csrc/interval_op/: interval_op.cpp  interval_op.cu  interval_ops.cu  set_interval.cu  slice_interval.cpp
csrc/search/: device_mesh.cpp  device_mesh.hpp  rpc.cpp  rpc.hpp  search.cpp  simulate.cpp  simulate.hpp
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  build.py
docs/: code_style.md  requirements.txt
docs/source/: algo.rst  arch.rst  concept.rst  conf.py  contributing.rst  customization.rst  distributed.rst  expconfig.rst  impl.rst  index.rst  install.rst  intro.rst  quickstart.rst
docs/system_components/: 00_system_overview.md  01_master_worker.md  02_data_worker.md  03_model_worker.md
docs/user_guide/: 00_quickstart.md  01_data.md  01_dataset.md  02_model.md  03_pipeline_parallel.md
examples/: api.py  cluster_config.json  load_and_eval_rw.py  ppo_sentiment.py  qh.json  visualize_dfg.py
examples/customized_exp/: ppo_ref_ema.py  ppo_sentiment.py
examples/profiling/: allocations.jsonl  datasets.jsonl  interfaces.jsonl  models.jsonl  profile.sh  profile_ppo_actor.sh  profile_ppo_critic.sh
examples/scripts/: dpo.sh  gen.sh  manual_ppo.sh  ppo.sh  ppo_manual.sh  reinforce.sh  rw.sh  sft.sh
experiments/: __init__.py  benchmark_exp.py  chat_rlhf.py  chat_rlhf_exp.py  dpo_exp.py  opt_16g.py  opt_1g.py  packed_dpo_exp.py  packed_gen_score_exp.py  packed_paired_rw_exp.py  packed_ppo_exp.py  packed_sft_exp.py  starcoder_16g.py  wps_formula_rw.py  wps_formula_sft.py  wps_rlhf.py  wps_rlhf_exp.py  wps_rw.py  wps_rw_exp.py  wpsf_ppo_exp.py  wpsf_ppo_pipe.py  wpsf_rw_exp.py  wpsf_sft_exp.py  wpsf_sft_pipe.py
experiments/autoexp/: auto_ppo.py  device_mapping.py
launch/: hello.py  launch_hello.py  launch_sweep.py  sweep.py
plot_scripts/: visualize_breakdown.py  visualize_fc_thpt.py  visualize_mscost.py  visualize_mscost_v2.py  visualize_overlapp_ratio.py  visualize_timeline.py  visualize_timeline_v2.py  visualize_weak_scaling.py
profiler/: __init__.py  comm.py  comm_main.py  device_mesh.py  engine.py  enumerate.py  estimate.py  exp_helper.py  experiments.py  interface.py  layers.py  layers_main.py  main.py  multi_host_main.py  param_sync_cost.py  profile_comm_main.py  profile_layers.py  profile_layers_main.py  profile_single_rpc.py  profile_single_rpc_kernel.py  rpc.py  search.py  utils.py  verify_estimation.py  worker.py
realhf/: __init__.py
reallm/: __init__.py
realrlhf/: __init__.py
scheduler/: client.py
scripts/: auto_ppo_benchmark.py  auto_ppo_parselog.py  collect_benchmark_result.py  collect_sweep_result.py  convert_imdb_score_data_into_rw_pairs.py  convert_imdb_to_json.py  convert_prompt_data.py  convert_wps_labeled_data.py  estimate_memory.py  format.py  generate_cfg.py  glance_data.py  hello_slurm.py  load_scratch_and_save.py  local_generate_server.py  make_contrastive_data.py  minimal_asyncio.py  pipe_sched_viewer.py  plot_pipeline_time.py  plot_reward.py  sample_wrong_code.py  search_result.py  search_time_profile.py  shrink_model_layers.py  simulated_pipe_sched_viewer.py  sosp_benchmark.py  sosp_dschat_parselog.py  sosp_parselog.py  srun.sh  test_srun.sh  transform_to_3d_ckpt.py  transform_to_pipe_ckpt.py  wash_head.py
system/: __init__.py  controller.py  data_worker.py  master_worker.py  model_worker.py  request_reply_stream.py  worker_base.py  worker_control.py
tests/: __init__.py  dataset_test.py  dlprof_example.py  flash_mqat_test.py  generate_test.py  hf_utils.py  inflight_batching_test.py  inflight_batching_throughput_test.py  logits_warper_test.py  num_parallel_strategies.py  parallel_data_broker_test.py  parallel_mqat_test.py  pipe_flash_mqat_test.py  pipe_model.py  pipe_mqat_test.py  pipe_sched_viewer.py  pipe_sched_viewer_test.py  pipe_utils.py  ppo_functional_test.py  profile_matmul.py  test_consistency.py  test_cpu_inference.py  test_cugae.py  test_distributed_load_hf.py  test_generate.py  test_grouped_gemm.py  test_hf_consistency.py  test_interval_ops.py  test_load_data.py  test_param_realloc.py  test_saveload.py  test_sequence_gather_split.py  torch_profile_example.py  transformer_generate.py  transformer_generate_test.py  utils.py
(+672 files in other folders)
